fixed header spacing and added railway dots
added val clearing for artist and song fields

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
- 
+
 }
 
 /* Header styles */
@@ -15,11 +15,12 @@ header {
 }
 
 #blueLogo {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway Dots', sans-serif;
   color: #92A8D1;
-  font-size: 40px;
+  font-size:55px;
   margin: 40px auto;
   text-align: center;
+  font-weight: normal;
 }
 
 #pinkLogo {
@@ -51,4 +52,16 @@ button {
 .slider {
   display: none;
   align-self: center;
+}
+
+#artistInput {
+  margin-top: 20px;
+}
+
+#songInput {
+  margin-top: 20px;
+}
+
+.header-section {
+  height: 100px;
 }
